# logwatcher

./: .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  clippy.toml  codecov.yml  sonar-project.properties  test_basic.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic.yml  ci.yml  codecov.yml  publish-github-packages.yml  sonarcloud.yml
benches/: performance.rs
examples/: basic_usage.sh
src/: cli.rs  config.rs  highlighter.rs  lib.rs  main.rs  matcher.rs  notifier.rs  utils.rs  watcher.rs
tests/: integration.rs
