[package]
name = "logwatcher"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Charretier <mathis.charretier@protonmail.com>"]
description = "Real-time log file monitoring with pattern highlighting and desktop notifications"
license = "MIT"
repository = "https://github.com/matcharr/logwatcher"
keywords = ["logs", "monitoring", "cli", "tail", "notifications"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "logwatcher"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
regex = "1"
termcolor = "1"
notify-rust = "4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
